--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 
-    @Styles.Render("~/bundles/adminlte/css")
+    @Styles.Render("~/bundles/admin/css")
     @RenderSection("styles", required: false)
 
     <!-- Ionicons -->
@@ -27,7 +27,7 @@
         @Html.Partial("Partials/_ControlSidebar")
     </div>
 
-    @Scripts.Render("~/bundles/adminlte/js")
+    @Scripts.Render("~/bundles/admin/js")
 
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
