--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
@@ -20,40 +20,31 @@
                     <a href="#" class="nav-link active">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
-                            Dashboard
+                            Katalog
                             <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="./index.html" class="nav-link active">
+                            <a href="@Url.Action("List", "Category", new { area = "Admin" })" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v1</p>
+                                <p>Kategoriler</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./index2.html" class="nav-link">
+                            <a href="@Url.Action("List", "Product", new { area = "Admin" })" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v2</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./index3.html" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v3</p>
+                                <p>Ürünler</p>
                             </a>
                         </li>
                     </ul>
                 </li>
-                @*<li class="nav-item">
-                    <a href="pages/widgets.html" class="nav-link">
+                <li class="nav-item">
+                    <a href="@Url.Action("List", "User", new { area = "Admin" })" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
-                        <p>
-                            Widgets
-                            <span class="right badge badge-danger">New</span>
-                        </p>
+                        <p>Kullanıcılar</p>
                     </a>
-                </li>*@
+                </li>
             </ul>
         </nav>
     </div>
