--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_MainSidebar.cshtml
@@ -16,9 +16,16 @@
 
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                <li class="nav-item">
+                    <a href="@Url.Action("Dashboard", "Home", new { area = "Admin" })" class="nav-link">
+                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <p>Dashboard</p>
+                    </a>
+                </li>
+
                 <li class="nav-item menu-open">
                     <a href="#" class="nav-link active">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa-book"></i>
                         <p>
                             Katalog
                             <i class="right fas fa-angle-left"></i>
@@ -41,7 +48,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="@Url.Action("List", "User", new { area = "Admin" })" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
+                        <i class="nav-icon far fa-user"></i>
                         <p>Kullanıcılar</p>
                     </a>
                 </li>
