--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Home/Dashboard.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Home/Dashboard.cshtml
@@ -8,7 +8,7 @@
             <div class="col-sm-6">
                 <h1 class="m-0">@ViewBag.Title</h1>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 text-right">
             </div>
         </div>
     </div>
