--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="float-left">@ViewBag.Title</h1>
+                <h1 class="m-0">@ViewBag.Title</h1>
             </div>
             <div class="col-sm-6 text-right">
                 <a href="@Url.Action("Create", "Product", new { area = "Admin" })" class="btn btn-primary">
