--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model CreateCategoryModel
+@using CafeMenuProject.WebUI.Areas.Admin.Models.Categories
+
+@{
     ViewBag.Title = "Yeni Kategori";
 }
 
