--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
@@ -22,6 +22,18 @@
 
 <section class="content">
     <div class="container-fluid">
-
+        <div class="card card-danger card-outline">
+            <div class="card-header with-border clearfix">
+                <h3 class="card-title">@ViewBag.PageTitle</h3>
+            </div>
+            <div class="card-body">
+                <form action="/" method="post">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </section>
