--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
@@ -29,9 +29,22 @@
             <div class="card-body">
                 <form action="/" method="post">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                        @Html.LabelFor(x => x.CategoryName, "Kategori Adı", htmlAttributes: new { @class = "" })
+                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control", placeholder = "Kategori adı" })
+                        @Html.ValidationMessageFor(x => x.CategoryName, "", new { @class = "text-danger" })
                     </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.ParentCategoryId, "Üst Kategori", new { @class = "" })
+                        @Html.DropDownListFor(
+                            x => x.ParentCategoryId,
+                            new SelectList(Model.AvailableParentCategories, "Value", "Text"),
+                            "Seçiniz...",
+                            new { @class = "form-control" }
+                        )
+                        @Html.ValidationMessageFor(x => x.ParentCategoryId, "", new { @class = "text-danger" })
+                    </div>
+
                 </form>
             </div>
         </div>
