--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Edit.cshtml
@@ -43,7 +43,7 @@
                         @Html.LabelFor(x => x.ParentCategoryId, "Üst Kategori", new { @class = "form-label" })
                         @Html.DropDownListFor(
                             x => x.ParentCategoryId,
-                            new SelectList(Model.AvailableParentCategories, "Value", "Text"),
+                            new SelectList(Model.AvailableParentCategories, "Value", "Text", Model.ParentCategoryId),
                             "Seçiniz...",
                             new { @class = "form-control" }
                         )
