--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,7 +27,13 @@
         @Html.Partial("Partials/_ControlSidebar")
     </div>
 
-    @Scripts.Render("~/bundles/admin/js")
+    @*@Scripts.Render("~/bundles/admin/js")*@
+    @Scripts.Render("~/bundles/admin/jquery")
+    @Scripts.Render("~/bundles/admin/jquery-ui-overlay")
+    @Scripts.Render("~/bundles/admin/bootstrap")
+    @Scripts.Render("~/bundles/admin/adminlte")
+    @Scripts.Render("~/bundles/admin/datatables")
+    @Scripts.Render("~/bundles/admin/moment")
 
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
