--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
@@ -54,6 +54,7 @@
                 responsive: true,
                 lengthChange: false,
                 autoWidth: false,
+                searching: false,
                 ajax: {
                     url: '@Url.Action("CategoryList", "Category")',
                     type: 'POST',
