--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,13 +27,14 @@
         @Html.Partial("Partials/_ControlSidebar")
     </div>
 
-    @*@Scripts.Render("~/bundles/admin/js")*@
     @Scripts.Render("~/bundles/admin/jquery")
     @Scripts.Render("~/bundles/admin/jquery-ui-overlay")
     @Scripts.Render("~/bundles/admin/bootstrap")
     @Scripts.Render("~/bundles/admin/adminlte")
     @Scripts.Render("~/bundles/admin/datatables")
     @Scripts.Render("~/bundles/admin/moment")
+    @Scripts.Render("~/bundles/admin/sweetalert2")
+    @Scripts.Render("~/bundles/admin/toastr")
 
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
