--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
@@ -24,10 +24,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <div class="card card-success card-outline">
-                    <div class="card-header with-border clearfix">
-                        <h3 class="card-title">@ViewBag.PageTitle</h3>
-                    </div>
+                <div class="card card-default card-outline">
                     <div class="card-body">
                         <table id="categories-datatable" class="table table-bordered table-striped">
                             <thead>
