--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Create.cshtml
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <div class="card card-danger card-outline">
             <div class="card-header with-border clearfix">
-                <h3 class="card-title">@ViewBag.PageTitle</h3>
+                <h3 class="card-title">@ViewBag.Title</h3>
             </div>
             <div class="card-body">
                 @using (Html.BeginForm("Create", "Category", FormMethod.Post))
