--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/Edit.cshtml
@@ -24,7 +24,9 @@
     <div class="container-fluid">
         <div class="card card-danger card-outline">
             <div class="card-header with-border clearfix">
-                <h3 class="card-title">@ViewBag.Title</h3>
+                <h3 class="card-title">
+                    <i class="fas fa-edit"></i> @ViewBag.Title
+                </h3>
             </div>
             <div class="card-body">
                 @using (Html.BeginForm("Edit", "Category", FormMethod.Post))
