--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Category/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using CafeMenuProject.WebUI.Areas.Admin.Models.Categories
-@model CategorySearchModel
+﻿@model CategorySearchModel
 
 @{
     ViewBag.Title = "Kategoriler";
