--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/List.cshtml
@@ -74,7 +74,9 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
+                                    <th>Ürün Resmi</th>
                                     <th>Ürün Adı</th>
+                                    <th>Fiyat</th>
                                     <th>Oluşturma Tarihi</th>
                                     <th>İşlem</th>
                                 </tr>
@@ -121,7 +123,19 @@
                         className: 'text-center'
                     },
                     {
+                        data: 'imagePath',
+                        width: '10%',
+                        className: 'text-center',
+                        render: function (data, type, row, meta) {
+                            return `<img src="${data}" class="img-fluid">`;
+                        }
+                    },
+                    {
                         data: 'productName'
+                    },
+                    {
+                        data: 'price',
+                        className: 'text-center',
                     },
                     {
                         data: 'createdDate',
