--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_NavSidebar.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Shared/Partials/_NavSidebar.cshtml
@@ -1,6 +1,4 @@
-﻿@using CafeMenuProject.WebUI.Helpers
-
-<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
+﻿<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
     <li class="nav-item">
         <a href="@Url.Action("Dashboard", "Home", new { area = "Admin" })"
            class="nav-link @(Html.IsActive("Home", "Dashboard", "Admin"))">
