--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model CreateProductModel
+
+@{
     ViewBag.Title = "Yeni Ürün";
 }
 
@@ -19,6 +21,40 @@
 
 <section class="content">
     <div class="container-fluid">
+        <div class="card card-danger card-outline">
+            <div class="card-header with-border clearfix">
+                <h3 class="card-title">
+                    <i class="fas fa-edit"></i> @ViewBag.Title
+                </h3>
+            </div>
+            <div class="card-body">
+                @using (Html.BeginForm("Create", "Product", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.CategoryName, "Kategori Adı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control", placeholder = "Kategori adı" })
+                        @Html.ValidationMessageFor(x => x.CategoryName, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.ParentCategoryId, "Üst Kategori", new { @class = "form-label" })
+                        @Html.DropDownListFor(
+                            x => x.ParentCategoryId,
+                            new SelectList(Model.AvailableParentCategories, "Value", "Text"),
+                            "Seçiniz...",
+                            new { @class = "form-control" }
+                        )
+                        @Html.ValidationMessageFor(x => x.ParentCategoryId, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group mt-3">
+                        <button type="submit" class="btn btn-primary">Kaydet</button>
+                        <a href="@Url.Action("Index", "Product")" class="btn btn-secondary">Vazgeç</a>
+                    </div>
+                }
+            </div>
+        </div>
     </div>
 </section>
