--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewBag.Title = "Ürün Düzenle";
+﻿@model EditProductModel
+
+@{
+    ViewBag.Title = "Yeni Ürün";
 }
 
 <div class="content-header clearfix">
@@ -19,6 +21,53 @@
 
 <section class="content">
     <div class="container-fluid">
+        <div class="card card-danger card-outline">
+            <div class="card-header with-border clearfix">
+                <h3 class="card-title">
+                    <i class="fas fa-edit"></i> @ViewBag.Title
+                </h3>
+            </div>
+            <div class="card-body">
+                @using (Html.BeginForm("Create", "Product", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.ProductName, "Ürün Adı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.ProductName, new { @class = "form-control", placeholder = "Ürün adı" })
+                        @Html.ValidationMessageFor(x => x.ProductName, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.CategoryId, "Kategori", new { @class = "form-label" })
+                        @Html.DropDownListFor(
+                            x => x.CategoryId,
+                            new SelectList(Model.AvailableCategories, "Value", "Text"),
+                            "Seçiniz...",
+                            new { @class = "form-control" }
+                        )
+                        @Html.ValidationMessageFor(x => x.CategoryId, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Price, "Ürün Fiyatı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.Price, new { @class = "form-control", placeholder = "Ürün fiyatı" })
+                        @Html.ValidationMessageFor(x => x.Price, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.ImagePath, "Ürün Resmi", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.ImagePath, new { @class = "form-control", placeholder = "Ürün resmi" })
+                        @Html.ValidationMessageFor(x => x.ImagePath, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group mt-3">
+                        <button type="submit" class="btn btn-primary" name="save">Kaydet</button>
+                        <button type="submit" class="btn btn-primary" name="save-continue">Kaydet ve Devam Et</button>
+                        <a href="@Url.Action("Index", "Product")" class="btn btn-secondary">Vazgeç</a>
+                    </div>
+                }
+            </div>
+        </div>
     </div>
 </section>
