--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -31,6 +31,7 @@
                 @using (Html.BeginForm("Edit", "Product", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
+                    @Html.HiddenFor(x => x.ProductId)
 
                     <div class="form-group">
                         @Html.LabelFor(x => x.ProductName, "Ürün Adı", htmlAttributes: new { @class = "form-label" })
