--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Product/Edit.cshtml
@@ -70,5 +70,7 @@
                 }
             </div>
         </div>
+
+        @Html.Action("ProductProperyWidget", "Components", new { productId = Model.ProductId })
     </div>
 </section>
