--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Components/_ProductProperyWidget.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Components/_ProductProperyWidget.cshtml
@@ -1,1 +1,12 @@
-﻿
+﻿@model PropertySearchModel
+
+<div class="card card-danger card-outline">
+    <div class="card-header with-border clearfix">
+        <h3 class="card-title">
+            <i class="fas fa-edit"></i> Propert Listesi
+        </h3>
+    </div>
+    <div class="card-body">
+
+    </div>
+</div>
