--- a/CafeMenuProject.WebUI/Areas/Admin/Views/User/Edit.cshtml
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/User/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model EditUserModel
+
+@{
     ViewBag.Title = "Kullanıcı Düzenle";
 }
 
@@ -19,6 +21,48 @@
 
 <section class="content">
     <div class="container-fluid">
+        <div class="card card-danger card-outline">
+            <div class="card-header with-border clearfix">
+                <h3 class="card-title">
+                    <i class="fas fa-edit"></i> @ViewBag.Title
+                </h3>
+            </div>
+            <div class="card-body">
+                @using (Html.BeginForm("Edit", "User", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(x => x.UserId)
 
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Name, "Adı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.Name, new { @class = "form-control", placeholder = "Adı" })
+                        @Html.ValidationMessageFor(x => x.Name, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Surname, "Soyadı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.Surname, new { @class = "form-control", placeholder = "Soyadı" })
+                        @Html.ValidationMessageFor(x => x.Surname, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Username, "Kullanıcı Adı", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.Username, new { @class = "form-control", placeholder = "Kullanıcı adı" })
+                        @Html.ValidationMessageFor(x => x.Username, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Password, "Şifre", htmlAttributes: new { @class = "form-label" })
+                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control", placeholder = "Şifre" })
+                        @Html.ValidationMessageFor(x => x.Password, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group mt-3">
+                        <button type="submit" class="btn btn-primary">Kaydet</button>
+                        <a href="@Url.Action("Index", "User")" class="btn btn-secondary">Vazgeç</a>
+                    </div>
+                }
+            </div>
+        </div>
     </div>
 </section>
